--- a/server/server.csproj
+++ b/server/server.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Lidgren.Network" Version="1.0.2" />
     <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
     <PackageReference Include="MonoGame.Framework.DesktopGL" Version="3.8.1.303" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
